--- a/src/scss/tools/reset.scss
+++ b/src/scss/tools/reset.scss
@@ -1,5 +1,3 @@
-//Reset to nullify default browser styling
-
 html,
 body {
   width: 100%;
@@ -18,6 +16,9 @@ body {
   padding: 0;
 }
 
+a {
+	text-decoration: none;
+}
 
 ul,
 ol {
