--- a/src/scss/general/general.scss
+++ b/src/scss/general/general.scss
@@ -1,3 +1,17 @@
-body {
-  background-color: gray;
+.wrap {
+  margin: 0 auto;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 50%;
+}
+
+.block-with-bg{
+  max-width: 500px;
+  width: 90%;
+  height: 200px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url("/assets/ben.jpg");
 }
