--- a/src/scss/general/general.scss
+++ b/src/scss/general/general.scss
@@ -13,5 +13,5 @@
   height: 200px;
   background-size: contain;
   background-repeat: no-repeat;
-  background-image: url("/assets/ben.jpg");
+	background-image: url("./public/assets/ben.jpg");
 }
