--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -9,8 +9,7 @@
 <body>
   <main class="wrap">
     <h1>Example Page</h1>
-    <p>To confirm that everything works as it should</p>
-    <p>Also, there is a picture inserted with css to test relative links in stylesheets.</p>
+		<% include ../parts/text.html %>
     <div class="block-with-bg"></div>
   </main>
 </body>
